[project]
name = "htmx_components"
version = "0.0.1"
authors = [
    { name = "Frank Hennige", email = "frank@hennige-it.de" },
]
description = "Pre-defined components for htmx and Django."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "django-htmx>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/FrankHennige/htmx-components"
Issues = "https://github.com/FrankHennige/htmx-components/issues"

[dependency-groups]
test = [
    "black>=25.9.0",
    "build>=1.3.0",
    "coverage>=7.10.7",
    "diff-cover>=9.7.1",
    "django>=4.2.25",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "ruff>=0.14.0",
    "setuptools>=80.9.0",
    "tox>=4.30.3",
    "yamllint>=1.37.1",
]
